--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -11,7 +11,7 @@
 
   <app-product-alerts
     [product]="product"
-    (click)="onNotify()"
+    (notify)="onNotify()"
   ></app-product-alerts>
 </div>
 
