--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,10 @@
-<p>cart works!</p>
+<h2>Checkout</h2>
+<div *ngFor="let item of items">
+  <span>{{ item.name }}</span
+  >{{ ' ' }}
+  <span>{{ item.price | currency }}</span>
+  <br />
+</div>
+<div *ngIf="items.length === 0">
+  <p>Your cart is empty!</p>
+</div>
