--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,10 +1,14 @@
 <h2>Checkout</h2>
 <div *ngFor="let item of items">
+  <p>
+    <a routerLink="/shipping">View Shipping Prices</a>
+  </p>
   <span>{{ item.name }}</span
   >{{ ' ' }}
   <span>{{ item.price | currency }}</span>
   <br />
   <button (click)="deleteItem(item)">Remove from Cart</button>
+  <br />
 </div>
 <div *ngIf="items.length === 0">
   <p>Your cart is empty!</p>
